--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -1,18 +1,17 @@
 .header {
-  height: 40px;
+  height: 80px;
   width: 100%;
   background-color: #373f41;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
 }
 
 .headerLogo {
-  margin: 10px 0 0 10px;
-  width: 77.3px;
-  height: 20px;
+  height: 40px;
 }
 
 .headerMenu {
-  width: 48px;
-  height: 27px;
-  float: right;
-  margin-top: 6px;
+  height: 20px;
 }
