--- a/client/src/css/landingPage.css
+++ b/client/src/css/landingPage.css
@@ -1,11 +1,12 @@
+body {
+  overflow: hidden;
+}
 .landingPageContainer {
   display: flex;
   flex-direction: column;
   height: 100vh;
   width: 100%;
-  overflow: hidden;
 }
-
 .landingPageBody {
   flex-grow: 1;
   background-image: url("../images/logo.svg");
