--- a/client/src/css/logoAnimation.css
+++ b/client/src/css/logoAnimation.css
@@ -1,8 +1,11 @@
 .background-absolute {
-  background: url("../images/structure-2.jpg");
   width: 100%;
   height: 100%;
   opacity: 0.1;
+}
+#waves {
+  width: 100%;
+  height: 100vh;
 }
 .container {
   width: 100%;
@@ -75,62 +78,103 @@
   position: absolute;
   width: 50%;
   height: 50%;
-  background: #00000073;
-  opacity: 30%;
+  background: #0000002e;
   outline: none;
+  border: 1px solid #ffffff14;
   font-size: 15pt;
   color: grey;
 }
 .button:hover {
   color: white;
-  background: #000000ef;
+  background: #00000055;
   border: 1px solid white;
 }
+
 #login {
   top: 0;
   left: 0;
 }
-#login:hover {
-  color: white;
-  background: #000000ef;
-  border: 1px solid white;
-}
 #login-text {
   position: absolute;
-  margin-top: 80px;
+  width: 130px;
+  height: 130px;
+  line-height: 130px;
+  margin-top: 20px;
   margin-left: 20px;
   top: 0;
+  border-radius: 50%;
 }
+#login:hover #login-text {
+  box-shadow: 0px 0px 0px 1px white;
+  background: #0087c122;
+  font-size: 17pt;
+}
+
 #showcase {
   top: 0;
   left: 50%;
 }
 #showcase-text {
   position: absolute;
-  margin-top: 80px;
+  width: 130px;
+  height: 130px;
+  line-height: 130px;
+  margin-top: 20px;
   margin-right: 20px;
   top: 0;
   right: 0;
+  border-radius: 50%;
 }
+#showcase:hover #showcase-text {
+  box-shadow: 0px 0px 0px 1px white;
+  background: #0087c122;
+  font-size: 17pt;
+}
+
 #user {
   top: 50%;
   left: 0;
 }
 #user-text {
   position: absolute;
-  margin-bottom: 60px;
+  width: 130px;
+  height: 130px;
+  line-height: 30px;
+  margin-bottom: 20px;
   margin-left: 20px;
   bottom: 0;
   left: 0;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
+#user:hover #user-text {
+  box-shadow: 0px 0px 0px 1px white;
+  background: #0087c122;
+  font-size: 17pt;
+}
+
 #artist {
   top: 50%;
   left: 50%;
 }
 #artist-text {
   position: absolute;
-  margin-bottom: 60px;
+  width: 130px;
+  height: 130px;
+  line-height: 30px;
+  margin-bottom: 20px;
   margin-right: 20px;
   bottom: 0;
   right: 0;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#artist:hover #artist-text {
+  box-shadow: 0px 0px 0px 1px white;
+  background: #0087c122;
+  font-size: 17pt;
 }
