--- a/client/src/css/logoAnimation.css
+++ b/client/src/css/logoAnimation.css
@@ -13,8 +13,7 @@
   background: linear-gradient(75deg, #606a6c, #081b1f);
 }
 
-.animated-logo-big-part,
-.small-circle {
+.animated-logo-big-part {
   position: absolute;
   width: 70%;
   text-align: center;
@@ -89,7 +88,7 @@
   animation: button-fade-in 2s ease 2s 1 forwards;
 }
 .button:hover {
-  color: white;
+  color: #b6b6b6;
   background: #00000055;
   border: 1px solid white;
 }
@@ -130,8 +129,8 @@
   animation: text-flash 1s ease 2.5s 1;
 }
 #login:hover #login-text {
-  box-shadow: 0px 0px 0px 1px white;
-  background: #0087c116;
+  box-shadow: 0px 0px 0px 1px #888888;
+  background: #0087c10a;
   font-size: 17pt;
 }
 #showcase {
@@ -152,8 +151,8 @@
   animation: text-flash 1s ease 2.5s 1;
 }
 #showcase:hover #showcase-text {
-  box-shadow: 0px 0px 0px 1px white;
-  background: #0087c110;
+  box-shadow: 0px 0px 0px 1px #888888;
+  background: #0087c10a;
   font-size: 17pt;
 }
 @keyframes showcase-transition {
@@ -196,8 +195,8 @@
   animation: text-flash 1s ease 2.5s 1;
 }
 #user:hover #user-text {
-  box-shadow: 0px 0px 0px 1px white;
-  background: #0087c125;
+  box-shadow: 0px 0px 0px 1px #888888;
+  background: #0087c10a;
   font-size: 17pt;
 }
 
@@ -231,8 +230,8 @@
   animation: text-flash 1s ease 2.5s 1;
 }
 #artist:hover #artist-text {
-  box-shadow: 0px 0px 0px 1px white;
-  background: #0087c110;
+  box-shadow: 0px 0px 0px 1px #888888;
+  background: #0087c10a;
   font-size: 17pt;
 }
 @keyframes text-flash {
