added css files

--- a/client/src/css/default.css
+++ b/client/src/css/default.css
@@ -6,3 +6,11 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+
+.main-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
