--- a/client/src/css/logoAnimation.css
+++ b/client/src/css/logoAnimation.css
@@ -131,7 +131,7 @@
 #login:hover #login-text {
   box-shadow: 0px 0px 0px 1px #888888;
   background: #0087c10a;
-  font-size: 17pt;
+  font-size: 16pt;
 }
 #showcase {
   top: 0;
@@ -153,7 +153,7 @@
 #showcase:hover #showcase-text {
   box-shadow: 0px 0px 0px 1px #888888;
   background: #0087c10a;
-  font-size: 17pt;
+  font-size: 16pt;
 }
 @keyframes showcase-transition {
   0% {
@@ -197,15 +197,15 @@
 #user:hover #user-text {
   box-shadow: 0px 0px 0px 1px #888888;
   background: #0087c10a;
-  font-size: 17pt;
+  font-size: 16pt;
 }
 
-#artist {
+#creative {
   top: 50%;
   left: 50%;
-  animation: artist-transition 2s ease 1s 1 forwards;
+  animation: creative-transition 2s ease 1s 1 forwards;
 }
-@keyframes artist-transition {
+@keyframes creative-transition {
   0% {
     transform: translate(60px, 0px) scale(0.9);
   }
@@ -214,7 +214,7 @@
     transform: translate(0px, 0px) scale(1);
   }
 }
-#artist-text {
+#creative-text {
   position: absolute;
   width: 130px;
   height: 130px;
@@ -229,10 +229,10 @@
   justify-content: center;
   animation: text-flash 1s ease 2.5s 1;
 }
-#artist:hover #artist-text {
+#creative:hover #creative-text {
   box-shadow: 0px 0px 0px 1px #888888;
   background: #0087c10a;
-  font-size: 17pt;
+  font-size: 16pt;
 }
 @keyframes text-flash {
   0% {
