component name change, cursor to pointer

--- a/client/src/css/logoAnimation.css
+++ b/client/src/css/logoAnimation.css
@@ -91,6 +91,7 @@
   color: #b6b6b6;
   background: #00000055;
   border: 1px solid white;
+  cursor: pointer;
 }
 @keyframes button-fade-in {
   0% {
