matched navbar color to figma design, edited logo

--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -4,7 +4,7 @@
   height: 80px;
   width: 100%;
   align-items: center;
-  background-color: #373f41;
+  background-color: #606a6c;
   padding: 0 20px;
 }
 .logo {
