--- a/client/src/css/menu.css
+++ b/client/src/css/menu.css
@@ -1,25 +1,22 @@
-.menu-container {
-  /* width: 100%;
-  height: 100vh; */
-}
 .menu {
   position: absolute;
   display: flex;
   flex-direction: column;
   right: -300px;
   opacity: 0.95;
+  z-index: 1;
 }
 .menu-fade-in {
-  animation: menu-fade-in 1s ease 1 forwards;
+  animation: menu-fade-in 0.4s ease 1 forwards;
 }
 .menu-fade-out {
-  animation: menu-fade-out 1s ease 1 forwards;
+  animation: menu-fade-out 0.4s ease 1 forwards;
 }
 .menu-item {
   background-image: url("../images/menu-structure.png");
-  color: #fefefe;
+  color: #fce2db;
   list-style: none;
-  height: 100px;
+  height: 80px;
   width: 300px;
   display: flex;
   align-items: center;
@@ -28,6 +25,7 @@
   font-size: 16pt;
 }
 .menu-item:hover {
+  color: #fefefe;
   background-image: url("../images/menu-structure-hover.png");
 }
 .icon {
