--- a/client/src/css/default.css
+++ b/client/src/css/default.css
@@ -6,13 +6,16 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
-
+body {
+  overflow-x: hidden;
+}
 .main-container {
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  overflow-x: hidden;
 }
 a {
   text-decoration: none;
