--- a/client/src/css/landingPage.css
+++ b/client/src/css/landingPage.css
@@ -1,11 +1,11 @@
-body {
-  overflow: hidden;
-}
-.landingPageContainer {
+.landing-page-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   width: 100%;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 .landingPageBody {
   flex-grow: 1;
