--- a/client/src/css/navbarDisplay.css
+++ b/client/src/css/navbarDisplay.css
@@ -9,3 +9,18 @@
   margin: 0px 5px;
   color: #fefefe;
 }
+
+.avatar-image {
+  width: 25px;
+  height: 25px;
+  object-fit: cover;
+  clip-path: circle(12.5px at center);
+  margin: 0px 15px;
+}
+.avatar-link {
+  line-height: 0;
+}
+.user-name {
+  color: #fefefe;
+  font-size: 17px;
+}
