--- a/client/src/css/registerUser.css
+++ b/client/src/css/registerUser.css
@@ -6,7 +6,10 @@
 .image-container {
   width: 50%;
   height: 100%;
-  overflow: hidden;
+  background-image: url('../images/register-user-img-3-export.jpg');
+  background-size: cover;
+  background-position: bottom;
+  clip-path: polygon(75% 0%, 0% 0%, 0% 100%, 100% 100%);
 }
 .background-image {
   height: 100%;
@@ -70,12 +73,12 @@
 }
 .checkbox-label {
   color: #606a6c;
-  font-size: 14pt;
+  font-size: 11pt;
   margin-left: 12px;
 }
 .checkbox-label-2 {
   color: #606a6c;
-  font-size: 10pt;
+  font-size: 9pt;
   margin: 5px 0px 0px 12px;
 }
 #align-items-top {
