--- a/client/src/css/registerUser.css
+++ b/client/src/css/registerUser.css
@@ -1,7 +1,9 @@
 .register-user-body {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
+  flex-grow: 1;
+  align-items: center;
 }
 .image-container {
   width: 50%;
@@ -17,19 +19,17 @@
 }
 .register-user-container {
   width: 50%;
-  height: 100%;
-  margin-top: 70px;
+  height: 555px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
+  margin: 40px 0px;
 }
 .form-container {
-  width: 50%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10px;
 }
 .register-icon {
   margin-right: 15px;
@@ -58,7 +58,7 @@
 .checkbox-container-outer {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 .checkbox-container-inner {
   width: 350px;
@@ -77,7 +77,7 @@
   margin-left: 12px;
 }
 .checkbox-label-2 {
-  color: #606a6c;
+  color: #a5a5a5;
   font-size: 9pt;
   margin: 5px 0px 0px 12px;
 }
@@ -89,6 +89,28 @@
   height: 1px;
   background-color: #9ba1a2;
 }
+.avatar-container {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  height: 60px;
+  margin: 30px 0px;
+  justify-content: space-between;
+}
+.user-icon {
+  height: 20px;
+  margin-right: 10px;
+}
+.upload-avatar {
+  color: #606a6c;
+  font-size: 11pt;
+  height: 20px;
+  display: flex;
+  align-items: center;
+}
+.choose-file {
+  height: 20px;
+}
 .register-button {
   width: 350px;
   height: 40px;
@@ -98,10 +120,6 @@
   color: #fefefe;
   font-size: 14pt;
   cursor: pointer;
-}
-.choose-file {
-  /* clip-path: 10px; */
-  /* opacity: 0; */
   margin-top: 30px;
 }
 .fake-button {
