--- a/client/src/css/registerUser.css
+++ b/client/src/css/registerUser.css
@@ -6,12 +6,34 @@
   align-items: center;
 }
 .image-container {
+  position: relative;
   width: 50%;
   height: 100%;
   background-image: url('../images/register-user-img-3-export.jpg');
   background-size: cover;
   background-position: bottom;
   clip-path: polygon(75% 0%, 0% 0%, 0% 100%, 100% 100%);
+}
+.image-container-2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images/register-user-img-3-export-dark-sky.png');
+  background-size: cover;
+  background-position: bottom;
+  clip-path: polygon(75% 0%, 0% 0%, 0% 100%, 100% 100%);
+  animation: opacity-transform 20s ease-in-out infinite;
+}
+@keyframes opacity-transform {
+  0% {
+    opacity: 0.2;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0.2;
+  }
 }
 .background-image {
   height: 100%;
