--- a/client/src/css/registerUser.css
+++ b/client/src/css/registerUser.css
@@ -13,6 +13,18 @@
   background-size: cover;
   background-position: bottom;
   clip-path: polygon(75% 0%, 0% 0%, 0% 100%, 100% 100%);
+  animation: saturation-transform 20s ease-in-out infinite;
+}
+@keyframes saturation-transform {
+  0% {
+    filter: saturate(0.9) brightness(0.9);
+  }
+  50% {
+    filter: saturate(0.7) brightness(0.8);
+  }
+  100% {
+    filter: saturate(0.9) brightness(0.9);
+  }
 }
 .image-container-2 {
   position: absolute;
@@ -115,23 +127,25 @@
   display: flex;
   flex-direction: column;
   width: 350px;
-  height: 60px;
+  height: 80px;
   margin: 30px 0px;
   justify-content: space-between;
-}
-.user-icon {
-  height: 20px;
-  margin-right: 10px;
 }
 .upload-avatar {
   color: #606a6c;
   font-size: 11pt;
-  height: 20px;
+  height: 40px;
   display: flex;
   align-items: center;
 }
+.user-icon {
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+}
 .choose-file {
   height: 20px;
+  color: #606a6c;
 }
 .register-button {
   width: 350px;
