--- a/client/src/css/menu.css
+++ b/client/src/css/menu.css
@@ -13,7 +13,7 @@
   animation: menu-fade-out 0.4s ease 1 forwards;
 }
 .menu-item {
-  background-image: url("../images/menu-structure.png");
+  background-image: url('../images/menu-structure.png');
   color: #fce2db;
   list-style: none;
   height: 80px;
@@ -26,7 +26,7 @@
 }
 .menu-item:hover {
   color: #fefefe;
-  background-image: url("../images/menu-structure-hover.png");
+  background-image: url('../images/menu-structure-hover.png');
 }
 .icon {
   width: 30px;
