--- a/client/src/css/registerUser.css
+++ b/client/src/css/registerUser.css
@@ -47,6 +47,98 @@
     opacity: 0.2;
   }
 }
+.image-lightning-1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images/lightning-1.png');
+  background-size: cover;
+  background-position: bottom;
+  clip-path: polygon(75% 0%, 0% 0%, 0% 100%, 100% 100%);
+  animation: lightning-1 20s ease-in-out infinite;
+  opacity: 0;
+}
+@keyframes lightning-1 {
+  0% {
+    opacity: 0;
+  }
+  44% {
+    opacity: 0;
+  }
+  45% {
+    opacity: 0.1;
+  }
+  46% {
+    opacity: 0.8;
+  }
+  48% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  52% {
+    opacity: 0.5;
+  }
+  54% {
+    opacity: 0.8;
+  }
+  56% {
+    opacity: 0.1;
+  }
+  57% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.image-lightning-2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images/lightning-2.png');
+  background-size: cover;
+  background-position: bottom;
+  clip-path: polygon(75% 0%, 0% 0%, 0% 100%, 100% 100%);
+  animation: lightning-2 20s ease-in-out infinite;
+  opacity: 0;
+}
+@keyframes lightning-2 {
+  0% {
+    opacity: 0;
+  }
+  46% {
+    opacity: 0;
+  }
+  55% {
+    opacity: 0.1;
+  }
+  56% {
+    opacity: 0.8;
+  }
+  57% {
+    opacity: 0.5;
+  }
+  58% {
+    opacity: 0.8;
+  }
+  59% {
+    opacity: 0.5;
+  }
+  60% {
+    opacity: 0.8;
+  }
+  61% {
+    opacity: 0.1;
+  }
+  62% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 .background-image {
   height: 100%;
   width: 100%;
