--- a/client/src/css/registerUser.css
+++ b/client/src/css/registerUser.css
@@ -53,7 +53,7 @@
 }
 .register-user-container {
   width: 50%;
-  height: 555px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -76,6 +76,13 @@
   color: #606a6c;
   margin-bottom: 20px;
 }
+.headline-2 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  color: #606a6c;
+  margin-bottom: 20px;
+}
 .input-text {
   width: 350px;
   height: 25px;
@@ -89,6 +96,13 @@
   /* Chrome/Opera/Safari */
   color: #a8a8a8;
 }
+.required-label {
+  width: 350px;
+  padding-left: 27px;
+  margin-bottom: 10px;
+  font-size: 9pt;
+  color: #a8a8a8;
+}
 .checkbox-container-outer {
   display: flex;
   flex-direction: column;
@@ -99,7 +113,7 @@
   height: 40px;
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .input-checkbox {
   width: 15px;
@@ -122,19 +136,20 @@
   width: 350px;
   height: 1px;
   background-color: #9ba1a2;
+  margin: 5px 0px;
 }
 .avatar-container {
   display: flex;
   flex-direction: column;
   width: 350px;
-  height: 80px;
-  margin: 30px 0px;
+  height: 70px;
+  margin: 15px 0px;
   justify-content: space-between;
 }
 .upload-avatar {
   color: #606a6c;
   font-size: 11pt;
-  height: 40px;
+  height: 25px;
   display: flex;
   align-items: center;
 }
