--- a/client/src/css/registerUser.css
+++ b/client/src/css/registerUser.css
@@ -278,22 +278,32 @@
   flex-direction: column;
   width: 350px;
   height: 70px;
-  margin: 15px 0px;
+  margin: 18px 0px;
   justify-content: space-between;
+}
+.avatar-container-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80px;
+  width: 175px;
 }
 .upload-avatar {
   color: #606a6c;
   font-size: 11pt;
+  width: 100%;
   height: 25px;
   display: flex;
   align-items: center;
 }
 .user-icon {
-  height: 25px;
-  width: 25px;
+  height: 44px;
+  width: 44px;
   margin-right: 10px;
+  clip-path: circle(22px at center);
 }
 .choose-file {
+  width: 100%;
   height: 20px;
   color: #606a6c;
 }
