--- a/client/src/css/registerCreative.css
+++ b/client/src/css/registerCreative.css
@@ -48,17 +48,17 @@
     opacity: 0.2;
   }
 }
-.image-lightning-1 {
+.creative-image-lightning-1 {
   position: absolute;
   width: 100%;
   height: 100%;
   background-image: url('../images/lightning-1.png');
   background-size: cover;
   background-position: bottom;
-  animation: lightning-1 20s ease-in-out infinite;
+  animation: creative-lightning-1 20s ease-in-out infinite;
   opacity: 0;
 }
-@keyframes lightning-1 {
+@keyframes creative-lightning-1 {
   0% {
     opacity: 0;
   }
@@ -100,10 +100,10 @@
   background-image: url('../images/lightning-2.png');
   background-size: cover;
   background-position: bottom;
-  animation: lightning-2 20s ease-in-out infinite;
+  animation: creative-lightning-2 20s ease-in-out infinite;
   opacity: 0;
 }
-@keyframes lightning-2 {
+@keyframes creative-lightning-2 {
   0% {
     opacity: 0;
   }
@@ -138,17 +138,17 @@
     opacity: 0;
   }
 }
-.image-lightning-3 {
+.creative-image-lightning-3 {
   position: absolute;
   width: 100%;
   height: 100%;
   background-image: url('../images/lightning-3.png');
   background-size: cover;
   background-position: bottom;
-  animation: lightning-3 20s ease-in-out infinite;
+  animation: creative-lightning-3 20s ease-in-out infinite;
   opacity: 0;
 }
-@keyframes lightning-3 {
+@keyframes creative-lightning-3 {
   0% {
     opacity: 0;
   }
@@ -404,10 +404,12 @@
   width: 22px;
   height: 22px;
   margin: 0px 8px;
+  pointer-events: none;
 }
 .category-label {
   color: #616869;
   font-size: 10pt;
+  pointer-events: none;
 }
 .social-media-container {
   display: flex;
