--- a/client/src/css/menu.css
+++ b/client/src/css/menu.css
@@ -5,6 +5,7 @@
   right: -1000px;
   opacity: 0.95;
   z-index: 1;
+  margin-top: 80px;
 }
 .menu-fade-in {
   animation: menu-fade-in 0.4s ease 1 forwards;
