--- a/client/src/css/registerCreative.css
+++ b/client/src/css/registerCreative.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-grow: 1;
   align-items: center;
+  margin-top: 80px;
 }
 .creative-image-container {
   position: relative;
