--- a/client/src/css/menu.css
+++ b/client/src/css/menu.css
@@ -1,5 +1,18 @@
-.menu {
+.menu-container {
   position: absolute;
+  top: -80px;
+  width: 100vw;
+  height: 100vh;
+}
+.burger-menu-container {
+  position: fixed;
+  z-index: 10;
+  top: 30px;
+  right: 45px;
+}
+.menu {
+  position: fixed;
+  top: 0;
   display: flex;
   flex-direction: column;
   right: -1000px;
