--- a/client/src/css/showcase.css
+++ b/client/src/css/showcase.css
@@ -7,6 +7,7 @@
 }
 .showcase-body {
   width: 100%;
+  min-height: 100vh;
   height: 100%;
   margin-top: 120px;
   padding: 0px 50px;
@@ -22,6 +23,7 @@
 .showcase-works-container {
   width: 100%;
   height: auto;
+  min-height: 100vh;
   margin-top: 40px;
   padding: 10px;
   background-color: #eeeeee;
